--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1 class="heading">Penuel English Dictionary</h1>
       <input type="text" class="input" id="input" placeholder="Search a word" />
-      <p class="info-text" id="info-text">Type a Word and Press Enter</p>
+      <p class="info-text" id="info-text">Type A Word and Press Enter</p>
       <div class="meaning-container" id="meaning-container">
         <p>Word Title: <span class="title" id="title">__</span></p>
         <p>Meaning: <span class="meaning" id="meaning">__</span></p>
