--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <div class="container">
+      <!--front page-->
       <h1 class="heading">Penuel English Dictionary</h1>
       <input type="text" class="input" id="input" placeholder="Search a word" />
       <p class="info-text" id="info-text">Type A Word and Press Enter</p>
+
+      <!--result page-->
       <div class="meaning-container" id="meaning-container">
         <p>Word Title: <span class="title" id="title">__</span></p>
         <p>Meaning: <span class="meaning" id="meaning">__</span></p>
